--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
   height: 30px;
 }
 
-.first-row {
+.display-row {
   flex-direction: column;
   align-items: flex-end;
   padding: 1.6rem;
